.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-mock-server
spec:
  selector:
    app: oauth-mock-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
