.k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth-mock-server
spec:
  to:
    kind: Service
    name: oauth-mock-server
  port:
    targetPort: 80
